[tool.poetry]
name = "poetry-poems"
version = "0.1.0"
description = ""
authors = ["harper25 <olesjakubb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flake8 = "^3.8.3"
pytest-coverage = "^0.0"
virtualenv = "^20.0.33"
poetry = "^1.1.1"
black = "^20.8b1"
flake8-isort = "^4.0.0"
flake8-print = "^3.1.4"
flake8-comprehensions = "^3.2.3"
flake8-use-fstring = "^1.1"

[tool.poetry.scripts]
poems = "poetry_poems.cli:poems"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=. --cov-config=.coveragerc --cov-report term"
testpaths = [
    "tests"
]

[tool.black]
line-length = 98
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
